--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,21 @@
 {
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "cmake.configureArgs": [
-        "-DARM_NONE_EABI_TOOLCHAIN_PATH=${env:ARM_NONE_EABI_TOOLCHAIN_PATH}",
-        "-DNRF5_SDK_PATH=${env:NRF5_SDK_PATH}",
+        "-DARM_NONE_EABI_TOOLCHAIN_PATH=${env:TOOLS_DIR}/${env:GCC_ARM_PATH}",
+        "-DNRF5_SDK_PATH=${env:TOOLS_DIR}/${env:NRF_SDK_VER}",
     ],
     "cmake.generator": "Unix Makefiles",
+    "cmake.statusbar.advanced": {
+        "launch": {
+            "visibility": "hidden"
+        },
+        "launchTarget": {
+            "visibility": "hidden"
+        },
+        "debug": {
+            "visibility": "hidden"
+        }
+    },
     "clang-tidy.buildPath": "build/compile_commands.json",
     "files.associations": {
         "array": "cpp",
@@ -55,5 +66,5 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp"
-    }
+    },
 }
