--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,10 @@
 FROM ubuntu:22.04
 
+ARG DEVCONTAINER
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -qq \
     && apt-get install -y \
-# x86_64 / generic packages
+      # x86_64 / generic packages
       bash \
       build-essential \
       cmake \
@@ -32,6 +33,12 @@ RUN apt-get update -qq \
     && apt-get install -y nodejs \
     && rm -rf /var/cache/apt/* /var/lib/apt/lists/*;
 
+# Devcontainer specific
+RUN apt-get update -qq \
+    && apt-get install -y \
+        clang-format-14 \
+        clang-tidy
+
 # Git needed for PROJECT_GIT_COMMIT_HASH variable setting
 
 RUN pip3 install adafruit-nrfutil
@@ -46,13 +53,11 @@ RUN npm i lv_img_conv@0.3.0 -g
 # build.sh knows how to compile
 COPY build.sh /opt/
 
-# Lets get each in a separate docker layer for better downloads
-# GCC
 RUN bash -c "source /opt/build.sh; GetGcc;"
-# NrfSdk
 RUN bash -c "source /opt/build.sh; GetNrfSdk;"
-# McuBoot
 RUN bash -c "source /opt/build.sh; GetMcuBoot;"
+
+RUN adduser infinitime
 
 ENV SOURCES_DIR /sources
 CMD ["/opt/build.sh"]
