--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,11 @@
             "gdbPath": "/opt/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gdb",
             "gdbTarget": "localhost:3333",
             "svdFile": "${workspaceRoot}/nrf52.svd",
-            "runToEntryPoint": "main"
+            "runToEntryPoint": "main",
+            "configFiles": [
+                "interface/cmsis-dap.cfg",
+                "target/nrf52.cfg"
+            ]
         },
         {
             "cwd": "${workspaceRoot}",
